# napari-turing

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
src/napari_turing/: Brusselator.py  GameOfLife.py  GrayScott.py  ModelTemplate.py  _TuringPattern.py  __init__.py  _model_list.py  _widget.py  napari.yaml
src/napari_turing/Models/: Brusselator.py  FitzHughNagumo.py  GameOfLife.py  GrayScott.py  ModelTemplate.py  _TuringPattern.py  _model_list.py
src/napari_turing/_tests/: test_widget.py
