[metadata]
name = napari-turing
version = 0.2.0
description = A plugin to run simmple simulations of Turing patterns
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/leoguignard/napari-turing
author = Léo Guignard
author_email = leo.guignard@univ-amu.fr
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/leoguignard/napari-turing/issues
    Documentation = https://github.com/leoguignard/napari-turing#README.md
    Source Code = https://github.com/leoguignard/napari-turing
    User Support = https://github.com/leoguignard/napari-turing/issues

[options]
packages = find:
install_requires =
    numpy
    scipy
    scikit-image
    magicgui
    qtpy
    napari

python_requires = >=3.8
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-turing = napari_turing:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.package_data]
* = *.yaml
